<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="10dp"

android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        >

        <ImageButton
            android:id="@+id/imagerogo"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:background="#f0f8ff"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/rogo" />

    </LinearLayout>

<Space
    android:layout_width="10dp"
    android:layout_height="wrap_content"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:background="#c0c0c0"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/osirase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/news"
            android:textSize="24dp" />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <TextView
        android:id="@+id/news"
        android:layout_marginLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

</LinearLayout>

    <Button
        android:id="@+id/bag"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="#99ccff"
        android:text="@string/checkBAG"
        android:textSize="24sp" />

    <Button
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="#F3CC93"
        android:text="@string/timetable"
        android:textSize="24sp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:id="@+id/touroku"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="#ffddff"
            android:text="@string/link_toroku"
            android:textSize="24sp" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/other"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="#B3B3B3"
            android:text="@string/class_toroku"
            android:textSize="24sp"/>


    </LinearLayout>


</LinearLayout>