<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B3B3B3"
        android:text="@string/checkDB"
        android:textAlignment="center"
        android:textSize="48sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="18sp"/>

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_delete_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_delete"
            android:textSize="18sp"/>
        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="18sp" />


    </LinearLayout>

    <Space
        android:layout_width="20dp"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>


    </LinearLayout>

    <Space
        android:layout_width="20dp"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/vlink_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ID:"
            android:textSize="18sp"/>

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_margin="10dp"
            android:id="@+id/vid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Space
        android:layout_width="20dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_margin="10dp"
        android:id="@+id/delete_can"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>