<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFDDFF"
        android:text="@string/link_toroku"
        android:textAlignment="center"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/road"
            android:textSize="18sp" />


        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#AFE6B1"
        android:text="タグを１つセンサーにあててください"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/vlink_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ID:"
            android:textSize="18sp"/>

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/vlink_id_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </LinearLayout>

    <Space
        android:layout_width="20dp"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/sniper_grade"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="18sp" />


    </LinearLayout>

    <Space
        android:layout_width="20dp"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/sniper_class"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="18sp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="18sp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>
<!--
        <Button
            android:id="@+id/button_write_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/up_write"
            android:textSize="18sp"/>

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>
      -->

        <Button
            android:id="@+id/button_write_uo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/up_write"
            android:textSize="18sp"/>

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="18sp" />
    </LinearLayout>

    <Space
        android:layout_width="20dp"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/touroku_can"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>